--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 <head>
 	<title>Tax Management System</title>
-	<link rel="stylesheet" type="text/css" href="
-	../css/style.css">
+	<link rel="stylesheet" type="text/css" href="../css/style.css">
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
@@ -25,8 +24,8 @@
 	<div class="header">
 		<nav class="navbar navbar-expand-md navbar-dark navigation">
 			<div class="container">
-				<a href="Home.html" class="navbar-brand text-warning font-weight-bold"> 	
-					<img class ="navbar-logo" src = "../Image/logo1.png">
+				<a href="index.html" class="navbar-brand text-warning font-weight-bold"> 	
+					<img class ="navbar-logo" src = "../images/logo1.png">
 				</a>
 
 				<button class ="navbar-toggler type="button" data-toggle="collapse" data-target="#collapsenavbar">
@@ -51,7 +50,7 @@
 							
 						</li>
 					</ul>
-					<a href="SignIn.html" class="nav-link text-white">
+					<a href="pages/SignIn.html" class="nav-link text-white">
 						<button type="button" class="btn btn-primary btn-sm">Sign-in</button>
 					</a>
 					 <form class="d-flex">
