--- a/pages/Register.html
+++ b/pages/Register.html
@@ -104,7 +104,7 @@
                   />
                 </div>
               </div>
-              <button class="button">Register</button>
+              <button class="button mt-3 mb-5">Register</button>
             </form>
           </div>
         </div>
