--- a/pages/SignIn.html
+++ b/pages/SignIn.html
@@ -88,6 +88,7 @@
         border-radius: 4px;
         font-weight: bold;
         box-shadow: 5px 5px 5px grey;
+        text-transform: uppercase;
       }
       .btn1:hover {
         background-color: white;
