--- a/pages/Dashboard.html
+++ b/pages/Dashboard.html
@@ -104,7 +104,7 @@
                     </div>
                     <div class="modal-footer">
                       <button type="button" class="btn btn-success" data-dismiss="modal">Add</button>
-                      <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                      <button type="button" class="btn btn-info" data-dismiss="modal">Close</button>
                     </div>
                   </div>
                   
@@ -127,33 +127,80 @@
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
               </div>  
-              <button type="button" class="btn btn-warning mt-2 px-5 mr-2">Edit</button>
+              <button type="button" class="btn btn-warning mt-2 px-5 mr-2" data-toggle="modal" data-target="#myModal1">Edit</button>
+              <button type="button" class="btn btn-danger mt-2 px-5" data-toggle="modal" data-target="#myModal2">Delete</button>        
+          </div>
+             <!--Edit button Popup for all news portal-->
+             <!-- Modal -->
+              <div class="modal fade" id="myModal1" role="dialog">
+                <div class="modal-dialog">      
+                  <!-- Modal content-->
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h4 class="modal-title">Edit news</h4>
+                      <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+                    <div class="modal-body">
+                      <div class="mb-3">
+                        <label for="exampleFormControlInput1" class="form-label">Title</label>
+                        <input type="title" class="form-control" id="exampleFormControlInput1" placeholder="Title">
+                      </div>
+                       <div class="mb-3">
+                        <label for="exampleFormControlInput1" class="form-label">Author</label>
+                        <input type="author" class="form-control" id="exampleFormControlInput1" placeholder="Author">
+                      </div>
+                      <label for="sel1">Category:</label>
+                      <select class="form-control" id="sel1">
+                        <option>Politics</option>
+                        <option>Sports</option>
+                        <option>Business</option>
+                        <option>Entertainment</option>
+                      </select>
+                      <div class="mb-3">
+                        <label for="exampleFormControlTextarea1" class="form-label">Body</label>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                      </div>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-warning" data-dismiss="modal">Edit</button>
+                      <button type="button" class="btn btn-info" data-dismiss="modal">Close</button>
+                    </div>
+                  </div>
+                </div>        
+              </div>
+              <!--Delete button Popup for all news portal-->
+             <!-- Modal -->
+              <div class="modal fade" id="myModal2" role="dialog">
+                <div class="modal-dialog">      
+                  <!-- Modal content-->
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h4 class="modal-title">Delete news</h4>
+                      <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+                    <div class="modal-body">
+                    <!--<i class="fa fa-exclamation-triangle" aria-hidden="true"></i>-->                     <p>Are you Sure you want to delete this post?</p>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-danger" data-dismiss="modal">Delete</button>
+                      <button type="button" class="btn btn-info" data-dismiss="modal">Close</button>
+                    </div>
+                  </div>
+                </div>        
+              </div>
+
+              <!--Another new box-->
+              <div class="col-sm mt-5">
+              <div class="card" style="width: 18rem; background-color: #B4B8AB">
+                <div class="card-body">
+                  <h5 class="card-title">Dahal files appeal to review verdict that revived UML, Maoist Center</h5>
+                  <h6 class="card-subtitle mb-2 text-black">Politics</h6>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>  
+              <button type="button" class="btn btn-warning mt-2 px-5 mr-2" data-toggle="modal" data-target="#myModal1">Edit</button>
               <button type="button" class="btn btn-danger mt-2 px-5">Delete</button>        
           </div>
-          <div class="col-sm mt-5">
-            <div class="card" style="width: 18rem; background-color: #B4B8AB">
-                <div class="card-body">
-                  <h5 class="card-title">Dahal files appeal to review verdict that revived UML, Maoist Center</h5>
-                  <h6 class="card-subtitle mb-2 text-black">Politics</h6>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
-              </div> 
-              <button type="button" class="btn btn-warning mt-2 px-5 mr-2">Edit</button>
-              <button type="button" class="btn btn-danger mt-2 px-5">Delete</button>                 
-            </div>
-          <div class="col-sm mt-5">
-            <div class="card" style="width: 18rem; background-color: #B4B8AB">
-                <div class="card-body">
-                  <h5 class="card-title">Dahal files appeal to review verdict that revived UML, Maoist Center</h5>
-                  <h6 class="card-subtitle mb-2 text-black">Politics</h6>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
-              </div> 
-              <button type="button" class="btn btn-warning mt-2 px-5 mr-2">Edit</button>
-              <button type="button" class="btn btn-danger mt-2 px-5">Delete</button>    
-          </div>
-        </div>
-         <div class="row">
           <div class="col-sm mt-5">
               <div class="card" style="width: 18rem; background-color: #B4B8AB">
                 <div class="card-body">
@@ -161,36 +208,13 @@
                   <h6 class="card-subtitle mb-2 text-black">Politics</h6>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
-              </div> 
-              <button type="button" class="btn btn-warning mt-2 px-5 mr-2">Edit</button>
-              <button type="button" class="btn btn-danger mt-2 px-5">Delete</button>            
-          </div>
-          <div class="col-sm mt-5">
-            <div class="card" style="width: 18rem; background-color: #B4B8AB">
-                <div class="card-body">
-                  <h5 class="card-title">Dahal files appeal to review verdict that revived UML, Maoist Center</h5>
-                  <h6 class="card-subtitle mb-2 text-black">Politics</h6>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
-              </div>
-              <button type="button" class="btn btn-warning mt-2 px-5 mr-2">Edit</button>
-              <button type="button" class="btn btn-danger mt-2 px-5">Delete</button>                  
-            </div>
-          <div class="col-sm mt-5">
-            <div class="card" style="width: 18rem; background-color: #B4B8AB">
-                <div class="card-body">
-                  <h5 class="card-title">Dahal files appeal to review verdict that revived UML, Maoist Center</h5>
-                  <h6 class="card-subtitle mb-2 text-black">Politics</h6>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
               </div>  
-              <button type="button" class="btn btn-warning mt-2 px-5 mr-2">Edit</button>
-              <button type="button" class="btn btn-danger mt-2 px-5">Delete</button>      
+              <button type="button" class="btn btn-warning mt-2 px-5 mr-2" data-toggle="modal" data-target="#myModal1">Edit</button>
+              <button type="button" class="btn btn-danger mt-2 px-5">Delete</button>        
+          </div>
+            </div>
           </div>
         </div>
-      </div>        
-    </div>
-
   </body>
   <script>
     $(function(){
