--- a/pages/Register.html
+++ b/pages/Register.html
@@ -1,4 +1,3 @@
-{% load static %}
 <!DOCTYPE html>
 <html>
   <head>
@@ -8,7 +7,7 @@
       rel="stylesheet"
       type="text/css"
       href="
-	  {% static 'css/Register.css' %}"
+	../css/Register.css"
     />
     <!-- Latest compiled and minified CSS -->
     <link
@@ -42,26 +41,22 @@
     <nav class="navbar navbar-expand-md navbar-dark navigation">
       <div class="container">
         <a
-          href="{% url 'home' %}"
+          href="../index.html"
           class="navbar-brand text-warning font-weight-bold"
         >
-          <img class="navbar-logo" src="{% static 'Images/logo1.png' %}" />
+          <img class="navbar-logo" src="../images/logo1.png" />
         </a>
       </div>
     </nav>
     <div class="container">
       <div class="row">
         <div class="col-lg-6 mt-5">
-          <img
-            class="personalizationImg"
-            src="{% static 'Images/Personalization.png' %}"
-          />
+          <img class="personalizationImg" src="../images/Personalization.png" />
         </div>
         <div class="col-lg-6 mt-5">
           <div class="login-container">
-            <form method="POST">
-              {% csrf_token %}
-              <img class="avatar" src="{% static 'Images/Avatar.png' %}" />
+            <form action="Register.html">
+              <img class="avatar" src="../images/Avatar.png" />
               <h2>Welcome</h2>
               <div class="input-div one focus">
                 <div class="i">
@@ -69,7 +64,7 @@
                 </div>
                 <div>
                   <h5>Username</h5>
-                  <div class="input">{{form.username}}</div>
+                  <input type="text" name="Username" class="input" required />
                 </div>
               </div>
               <div class="input-div two focus">
@@ -78,7 +73,7 @@
                 </div>
                 <div>
                   <h5>E-mail</h5>
-                  <div class="input">{{form.email}}</div>
+                  <input type="email" name="Email" class="input" required />
                 </div>
               </div>
               <div class="input-div three focus">
@@ -87,7 +82,12 @@
                 </div>
                 <div>
                   <h5>Password</h5>
-                  <div class="input">{{form.password1}}</div>
+                  <input
+                    type="Password"
+                    name="Password"
+                    class="input"
+                    required
+                  />
                 </div>
               </div>
               <div class="input-div four focus">
@@ -96,19 +96,21 @@
                 </div>
                 <div>
                   <h5>Confirm Password</h5>
-                  <div class="input">{{form.password2}}</div>
+                  <input
+                    type="Password"
+                    name="Password"
+                    class="input"
+                    required
+                  />
                 </div>
               </div>
-              <button class="button">Register</button>
-              Already have an account?
-              <a href="{% url 'login' %}" class="ml-2">Login</a>
+              <button class="button mt-3 mb-5">Register</button>
             </form>
           </div>
-          {{form.errors}}
         </div>
       </div>
     </div>
 
-    <script type="text/javascript" src="js/"></script>
+    <!-- <script type="text/javascript" src="js/"></script> -->
   </body>
 </html>
