Added edit file and changed in Dashboard

--- a/pages/Dashboard.html
+++ b/pages/Dashboard.html
@@ -126,8 +126,10 @@
                   <h6 class="card-subtitle mb-2 text-black">Politics</h6>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
-              </div>  
-              <button type="button" class="btn btn-warning mt-2 px-5 mr-2" data-toggle="modal" data-target="#myModal1">Edit</button>
+              </div> 
+              <a href="Edit.html"> 
+              <button type="button" class="btn btn-warning mt-2 px-5 mr-2">Edit</button>
+              </a>
               <button type="button" class="btn btn-danger mt-2 px-5" data-toggle="modal" data-target="#myModal2">Delete</button>        
           </div>
              <!--Edit button Popup for all news portal-->
