--- a/pages/Edit.html
+++ b/pages/Edit.html
@@ -65,8 +65,12 @@
                       <label for="exampleFormControlInput1" class="form-label">Author</label>
                       <input type="author" class="form-control" id="exampleFormControlInput1" placeholder="Author">
                     </div>
+                    <div class="mb-3">
+                      <label for="formFile" class="form-label">Choose a picture</label>
+                      <input class="form-control" type="file" id="formFile" style="padding-bottom: 36px;">
+                    </div>
                     <label for="sel1">Category:</label>
-                    <select class="form-control" id="sel1">
+                    <select class="form-control mb-3" id="sel1">
                       <option>Politics</option>
                       <option>Sports</option>
                       <option>Business</option>
