--- a/pages/Register.html
+++ b/pages/Register.html
@@ -38,6 +38,7 @@
     <script src="https://kit.fontawesome.com/a81368914c.js"></script>
   </head>
   <body>
+    <!--Navigation Bar-->
     <nav class="navbar navbar-expand-md navbar-dark navigation">
       <div class="container">
         <a
@@ -48,6 +49,7 @@
         </a>
       </div>
     </nav>
+    <!--Register Portal-->
     <div class="container">
       <div class="row">
         <div class="col-lg-6 mt-5">
@@ -110,7 +112,10 @@
         </div>
       </div>
     </div>
+    <footer>
+      <hr>
+      <p style="text-align: center; color: #3E424B;">Copyright &copy; 2021, All rights reserved</p>
+    </footer>
 
-    <!-- <script type="text/javascript" src="js/"></script> -->
   </body>
 </html>
