--- a/pages/SignIn.html
+++ b/pages/SignIn.html
@@ -2,11 +2,7 @@
 <html>
   <head>
     <title>Tax Management System</title>
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="
-	../css/style.css"
+    <link rel="stylesheet" type="text/css"href="../css/style.css"
     />
     <!-- Latest compiled and minified CSS -->
     <link
@@ -102,6 +98,7 @@
     </style>
   </head>
   <body>
+    <!--NavBar-->
     <div class="header">
       <nav class="navbar navbar-expand-md navbar-dark navigation">
         <div class="container">
@@ -114,6 +111,7 @@
         </div>
       </nav>
 
+      <!--Login Portal-->
       <div class="log-header">
         <h2>Log In</h2>
         <h3>Get news and more information</h3>
@@ -183,6 +181,11 @@
         </div>
       </section>
     </div>
+    <!--Footer-->
+    <footer>
+      <hr>
+      <p style="text-align: center; color: #3E424B;">Copyright &copy; 2021, All rights reserved</p>
+    </footer>
     <script>
       function btnClicked() {
         document.location.href = "Dashboard.html";
