--- a/index.html
+++ b/index.html
@@ -19,8 +19,12 @@
 
 	<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
 </head>
 <body style="background-color: rgb(219, 226, 226);">
+	<!--navigation bar-->
 	<div class="header">
 		<nav class="navbar navbar-expand-md navbar-dark navigation">
 			<div class="container">
@@ -38,16 +42,32 @@
 							<a href="index.html" class="nav-link text-white">HOME</a>
 						</li>
 						<li class="nav-item"> 
-							<a href="pages/politics.html" class="nav-link text-white">POLITICS</a>
+							<a href="" class="nav-link text-white">ABOUT US</a>
+						</li>
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle " href="#" id="navbarDropdown" role="button" data-toggle="dropdown" style="color: white;">
+								NEWS
+							</a>
+							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+								<a class="dropdown-item" href="#">
+									POLITICS
+								</a>
+								<div class="dropdown-divider"></div>
+								<a class="dropdown-item" href="#">
+									ENTERTAINMENT
+								</a>
+								<div class="dropdown-divider"></div>
+								<a class="dropdown-item" href="#">
+									BUSINESS
+								</a>
+								<div class="dropdown-divider"></div>
+								<a class="dropdown-item" href="#">
+									SPORTS
+								</a>
+							</div>
 						</li>
 						<li class="nav-item"> 
-							<a href="" class="nav-link text-white">BUSINESS</a>
-						</li>
-						<li class="nav-item"> 
-							<a href="" class="nav-link text-white">SPORT</a>
-						</li>
-						<li class="nav-item"> 
-							
+							<a href="pages/politics.html" class="nav-link text-white">TAX CALCULATOR</a>
 						</li>
 					</ul>
 					<a href="pages/SignIn.html" class="nav-link text-white">
@@ -66,9 +86,11 @@
 		<div class="row">
 			<div class="col-lg-8 md-8 sm-10">
 				<div class="news-portal">
-					<img src="images/vaccine.jpg" class="image">
-					<h3 class="title">COVID 19 vaccination campaign postponed untill new batch of vacciness arrive in Nepal
-					</h3>
+					<a href = "pages/Blog.html" style="text-decoration: none;">
+						<img src="images/vaccine.jpg" class="image">
+						<h3 class="title">COVID 19 vaccination campaign postponed untill new batch of vacciness arrive in Nepal
+						</h3>
+					</a>
 				</div>
 			</div>
 			<div class="col-lg-4 md-8 sm-10">
@@ -87,8 +109,94 @@
 					</div>
 				</div>
 			</div>
-			
 		</div>
+		<img src="images/pajero.gif" class="advertisement">
+		<div>
+			<h4 class="category">Business</h4>
+			<div class="row">
+				<div class="col-lg-3">
+					<div class ="businessNews">
+						<img src="images/pathao.jpg" class="businessImg">
+						<h4 class="businessHeading">Tootle-Pathao controversy: 5 years on, Nepal undecided between legalising ride-sharing and banning</h4>
+						<p class="businessTopic">On March 22, 2021, a Pathao rider was assaulted by a taxi driver at Gongabu...</p>
+					</div>
+				</div>
+				<div class="col-lg-3">
+					<img src="images/licence.jpg" class="businessImg">
+					<h4 class="businessHeading">New driving licence-holders will have to serve one year’s probation</h4>
+					<p class="businessTopic">The government is revising its driving licence rules, according to which new licence-holders...</p>
+				</div>
+				<div class="col-lg-3">
+					<img src="images/annapurna.webp" class="businessImg">
+					<h4 class="businessHeading">Hotels in Nepal losing Rs 1.8 billion to Covid-19 every month</h4>
+					<p class="businessTopic">It has been more than one year since the Covid-19 pandemic began taking its toll on...</p>
+				</div>
+				<div class="col-lg-3">
+					<img src="images/flight.jpg" class="businessImg">
+					<h4 class="businessHeading">Nepal allows internet facility in its sky during international flights</h4>
+					<p class="businessTopic">Nepal’s telecommunications regulator has decided to allow international airlines to use..</p>
+				</div>
+			</div>
+		</div>
+		<div>
+			<h4 class="category">Sports</h4>
+			<div class="row">
+				<div class="col-lg-3">
+					<div class ="businessNews">
+						<img src="images/stadium.jpg" class="businessImg">
+						<h4 class="businessHeading">‘Not enough time left’: BCCI won’t shift games out of Mumbai</h4>
+						<p class="businessTopic">IPL matches in Mumbai will not be shifted out despite the city reporting over...</p>
+					</div>
+				</div>
+				<div class="col-lg-3">
+					<img src="images/maymol-rocky.jpg" class="businessImg">
+					<h4 class="businessHeading">India Women going all-out in preparation for Uzbekistan friendly: Maymol Rocky</h4>
+					<p class="businessTopic">Travelling to Uzbekistan well ahead of the two friendly matches...</p>
+				</div>
+				<div class="col-lg-3">
+					<img src="images/Australia.jpg" class="businessImg">
+					<h4 class="businessHeading">Meg Lanning-led Australia set world record of consecutive ODI wins</h4>
+					<p class="businessTopic">Alyssa Healy and Megan Schutt powered Australia to a ...</p>
+				</div>
+				<div class="col-lg-3">
+					<img src="images/football.jpg" class="businessImg">
+					<h4 class="businessHeading">Bayern Munich beats Leipzig, takes big step toward Bundesliga title</h4>
+					<p class="businessTopic">Leon Goretzka scored for Bayern Munich to take a giant step toward..</p>
+				</div>
+			</div>
+		</div>
+
+		<!--Footer-->
+		<div class="row footer" style="margin-top: 25px;">
+			<div class="col-lg-4 footer-content">
+				<img src ="images/logo1.png" class="navbar-logo">
+				<p>The english edition Online News</p>
+				<p>Phone No: 9856234124,014256352</p>
+				<p>taxcompany@gmail.com</p>
+			</div>
+			<div class="col-lg-4 footer-content">
+				<h6>News</h6>
+				<p>Politics</p>
+				<p>Entertainment</p>
+				<p>Sports</p>
+				<p>Business</p>
+			</div>
+		    <div class="col-lg-4 footer-content">
+				<h6>You can also find us on</h6>
+				<div style="font-size: 35px; margin-left: 10px;">
+					<i class="fa fa-facebook-official"></i>
+					&nbsp;&nbsp;
+					<i class="fa fa-instagram"></i>
+					&nbsp;&nbsp;
+					<i class="fa fa-twitter-square"></i>
+				</div>
+			</div>
+			<div style="background-color: #090162; color: white;width: 100%;">
+				<p style="text-align: center;">Copyright &copy; 2021 Tax Management System, All rights reserved</p>
+			</div>
+		</div>
+		
+				
 	</div>
 </body>
 </html>
