Added taxCalculator frontend page

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 							</div>
 						</li>
 						<li class="nav-item"> 
-							<a href="pages/politics.html" class="nav-link text-white">TAX CALCULATOR</a>
+							<a href="pages/taxCalculator.html" class="nav-link text-white">TAX CALCULATOR</a>
 						</li>
 					</ul>
 					<a href="pages/SignIn.html" class="nav-link text-white">
@@ -191,6 +191,7 @@
 					<i class="fa fa-twitter-square"></i>
 				</div>
 			</div>
+			<hr class="mb-3" style="background-color: white; border: 1px solid white; width: 100%; margin-left: 0; margin-right: 0;">
 			<div style="background-color: #090162; color: white;width: 100%;">
 				<p style="text-align: center;">Copyright &copy; 2021 Tax Management System, All rights reserved</p>
 			</div>
