--- a/pages/Register.html
+++ b/pages/Register.html
@@ -6,8 +6,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="
-	../css/Register.css"
+      href="../css/Register.css"
     />
     <!-- Latest compiled and minified CSS -->
     <link
