--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<img class ="navbar-logo" src = "images/logo1.png">
 				</a>
 
-				<button class ="navbar-toggler type="button" data-toggle="collapse" data-target="#collapsenavbar">
+				<button class ="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsenavbar">
 					<span class="navbar-toggler-icon">	
 					</span>
 				</button>
@@ -42,14 +42,14 @@
 							<a href="index.html" class="nav-link text-white">HOME</a>
 						</li>
 						<li class="nav-item"> 
-							<a href="" class="nav-link text-white">ABOUT US</a>
+							<a href="pages/About.html" class="nav-link text-white">ABOUT US</a>
 						</li>
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle " href="#" id="navbarDropdown" role="button" data-toggle="dropdown" style="color: white;">
 								NEWS
 							</a>
 							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-								<a class="dropdown-item" href="#">
+								<a class="dropdown-item" href="pages/News.html">
 									POLITICS
 								</a>
 								<div class="dropdown-divider"></div>
@@ -81,6 +81,7 @@
 			</div>
 		</nav>
 	</div>
+
 	<!-- page content-->	
 	<div class="container" style= "background-color: white">
 		<div class="row">
@@ -164,40 +165,41 @@
 					<p class="businessTopic">Leon Goretzka scored for Bayern Munich to take a giant step toward..</p>
 				</div>
 			</div>
-		</div>
-
-		<!--Footer-->
-		<div class="row footer" style="margin-top: 25px;">
-			<div class="col-lg-4 footer-content">
-				<img src ="images/logo1.png" class="navbar-logo">
-				<p>The english edition Online News</p>
-				<p>Phone No: 9856234124,014256352</p>
-				<p>taxcompany@gmail.com</p>
-			</div>
-			<div class="col-lg-4 footer-content">
-				<h6>News</h6>
-				<p>Politics</p>
-				<p>Entertainment</p>
-				<p>Sports</p>
-				<p>Business</p>
-			</div>
-		    <div class="col-lg-4 footer-content">
-				<h6>You can also find us on</h6>
-				<div style="font-size: 35px; margin-left: 10px;">
-					<i class="fa fa-facebook-official"></i>
-					&nbsp;&nbsp;
-					<i class="fa fa-instagram"></i>
-					&nbsp;&nbsp;
-					<i class="fa fa-twitter-square"></i>
-				</div>
-			</div>
-			<hr class="mb-3" style="background-color: white; border: 1px solid white; width: 100%; margin-left: 0; margin-right: 0;">
-			<div style="background-color: #090162; color: white;width: 100%;">
-				<p style="text-align: center;">Copyright &copy; 2021 Tax Management System, All rights reserved</p>
-			</div>
-		</div>
-		
-				
+		</div>			
 	</div>
+	<!--Footer-->
+	<footer class="footer">
+		<div class="container">
+		   <div class="row" style="margin-top: 25px;">
+			   <div class="col-lg-4 footer-content">
+				   <img src ="../images/logo1.png" class="navbar-logo">
+				   <p>The english edition Online News</p>
+				   <p>Phone No: 9856234124,014256352</p>
+				   <p>taxcompany@gmail.com</p>
+			   </div>
+			   <div class="col-lg-4 footer-content">
+				   <h6>News</h6>
+				   <p>Politics</p>
+				   <p>Entertainment</p>
+				   <p>Sports</p>
+				   <p>Business</p>
+			   </div>
+			   <div class="col-lg-4 footer-content">
+				   <h6>You can also find us on</h6>
+				   <div style="font-size: 35px; margin-left: 10px;">
+					   <i class="fa fa-facebook-official"></i>
+					   &nbsp;&nbsp;
+					   <i class="fa fa-instagram"></i>
+					   &nbsp;&nbsp;
+					   <i class="fa fa-twitter-square"></i>
+				   </div>
+			   </div>
+			   <hr class="mb-3" style="background-color: white; border: 1px solid white; width: 100%; margin-left: 0; margin-right: 0;">
+			   <div style="background-color: #090162; color: white;width: 100%;">
+				   <p style="text-align: center;">Copyright &copy; 2021 Tax Management System, All rights reserved</p>
+			   </div>
+		   </div>
+	   </div>
+   </footer>
 </body>
 </html>
