Added tax history page and tax history button in tax calculator

--- a/pages/taxCalculator.html
+++ b/pages/taxCalculator.html
@@ -51,14 +51,14 @@
                                 <a href="../index.html" class="nav-link text-white">HOME</a>
                             </li>
                             <li class="nav-item"> 
-                                <a href="" class="nav-link text-white">ABOUT US</a>
+                                <a href="./About.html" class="nav-link text-white">ABOUT US</a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle " href="#" id="navbarDropdown" role="button" data-toggle="dropdown" style="color: white;">
                                     NEWS
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" href="#">
+                                    <a class="dropdown-item" href="./News.html">
                                         POLITICS
                                     </a>
                                     <div class="dropdown-divider"></div>
@@ -76,7 +76,7 @@
                                 </div>
                             </li>
                             <li class="nav-item"> 
-                                <a href="pages/politics.html" class="nav-link text-white">TAX CALCULATOR</a>
+                                <a href="taxCalculator.html" class="nav-link text-white">TAX CALCULATOR</a>
                             </li>
                         </ul>
                         <a href="./SignIn.html" class="nav-link text-white">
@@ -90,8 +90,12 @@
                 </div>
             </nav>
         </div>
-        <h3 class="text-center mt-4 mb-4">SALARY TAX CALCULATOR</h3>
+        
         <div class="container">
+                <h3 class="text-center mt-4 mb-4 mr-5">SALARY TAX CALCULATOR</h3>
+                <a href="./TaxHistory.html">
+                    <button class="btn btn-success float-right" style="margin-top: -4rem;">Tax History</button>
+                </a>
             <form name="myform" class="form-group" id="form">
                 <div class="row jumbotron px-3 py-3 text-center">
                     <div class="col-md-3 mb-4">
