--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 		<div class="container">
 		   <div class="row" style="margin-top: 25px;">
 			   <div class="col-lg-4 footer-content">
-				   <img src ="../images/logo1.png" class="navbar-logo">
+				   <img src ="images/logo1.png" class="navbar-logo">
 				   <p>The english edition Online News</p>
 				   <p>Phone No: 9856234124,014256352</p>
 				   <p>taxcompany@gmail.com</p>
