--- a/pages/About.html
+++ b/pages/About.html
@@ -48,7 +48,7 @@
 								NEWS
 							</a>
 							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-								<a class="dropdown-item" href="#">
+								<a class="dropdown-item" href="./News.html">
 									POLITICS
 								</a>
 								<div class="dropdown-divider"></div>
@@ -126,7 +126,7 @@
         </div>    
         <div class="row mb-5">
             <div class="col-lg-3">
-                <div class="card" style="border: 1px solid black;">
+                <div class="card mt-3" style="border: 1px solid black;">
                     <div class="card-body text-center">
                         <i class="fa fa-mobile fa-2x" aria-hidden="true"></i>
                         <h6>Publication</h6>
@@ -138,7 +138,7 @@
                 </div>
             </div>
             <div class="col-lg-3">
-                <div class="card" style="border: 1px solid black;">
+                <div class="card mt-3" style="border: 1px solid black;">
                     <div class="card-body text-center">
                         <i class="fa fa-eye fa-2x" aria-hidden="true"></i>
                         <h6>Multi view</h6>
@@ -150,7 +150,7 @@
                 </div>
             </div>
             <div class="col-lg-3">
-                <div class="card" style="border: 1px solid black;">
+                <div class="card mt-3" style="border: 1px solid black;">
                     <div class="card-body text-center">
                         <i class="fa fa-archive fa-2x" aria-hidden="true"></i>
                         <h6>Archive</h6>
@@ -162,7 +162,7 @@
                 </div>
             </div>
             <div class="col-lg-3">
-                <div class="card" style="border: 1px solid black;">
+                <div class="card mt-3" style="border: 1px solid black;">
                     <div class="card-body text-center">
                         <i class="fa fa-download fa-2x" aria-hidden="true"></i>
                         <h6>Download & Save</h6>
