--- a/pages/About.html
+++ b/pages/About.html
@@ -1,9 +1,8 @@
-{% load static %}
 <!DOCTYPE html>
 <html>
     <head>
         <title>Tax Management System</title>
-            <link rel="stylesheet" type="text/css" href="{% static 'css/About.css' %}">
+            <link rel="stylesheet" type="text/css" href="../css/About.css">
             <!-- Latest compiled and minified CSS -->
             <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
@@ -28,8 +27,8 @@
 	<div class="header">
 		<nav class="navbar navbar-expand-md navbar-dark navigation">
 			<div class="container">
-				<a href="{% url 'home' %}" class="navbar-brand text-warning font-weight-bold"> 	
-					<img class ="navbar-logo" src = "{% static 'Images/logo1.png' %}">
+				<a href="../index.html" class="navbar-brand text-warning font-weight-bold"> 	
+					<img class ="navbar-logo" src = "../images/logo1.png">
 				</a>
 
 				<button class ="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsenavbar">
@@ -39,39 +38,39 @@
 				<div class="collapse navbar-collapse text-center " id="collapsenavbar">
 					<ul class="navbar-nav ml-auto mr-auto">
 						<li class="nav-item"> 
-							<a href="{% url 'home' %}" class="nav-link text-white">HOME</a>
+							<a href="../index.html" class="nav-link text-white">HOME</a>
 						</li>
 						<li class="nav-item"> 
-							<a href="{% url 'about' %}" class="nav-link text-white">ABOUT US</a>
+							<a href="About.html" class="nav-link text-white">ABOUT US</a>
 						</li>
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle " href="#" id="navbarDropdown" role="button" data-toggle="dropdown" style="color: white;">
 								NEWS
 							</a>
 							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-								<a class="dropdown-item" href="{% url 'politics' %}">
+								<a class="dropdown-item" href="./News.html">
 									POLITICS
 								</a>
 								<div class="dropdown-divider"></div>
-								<a class="dropdown-item" href="{% url 'entertainment' %}">
+								<a class="dropdown-item" href="#">
 									ENTERTAINMENT
 								</a>
 								<div class="dropdown-divider"></div>
-								<a class="dropdown-item" href="{% url 'business' %}">
+								<a class="dropdown-item" href="#">
 									BUSINESS
 								</a>
 								<div class="dropdown-divider"></div>
-								<a class="dropdown-item" href="{% url 'sports' %}">
+								<a class="dropdown-item" href="#">
 									SPORTS
 								</a>
 							</div>
 						</li>
 						<li class="nav-item"> 
-							<a href="{% url 'Tax_calculator' %}" class="nav-link text-white">TAX CALCULATOR</a>
+							<a href="./taxCalculator.html" class="nav-link text-white">TAX CALCULATOR</a>
 						</li>
 					</ul>
-					<a href="{% url 'logout' %}" class="nav-link text-white">
-						<button type="button" class="btn btn-primary btn-sm">Logout</button>
+					<a href="./SignIn.html" class="nav-link text-white">
+						<button type="button" class="btn btn-primary btn-sm">Sign-in</button>
 					</a>
 					 <form class="d-flex">
 				        <input class="form-control" type="search" placeholder="Search" aria-label="Search">
@@ -117,8 +116,8 @@
                 </p> -->
             </div>
             <div class="col-lg-6">
-                <img src="{% static 'Images/building.jpg' %}" class="building-img mt-5">
-                <img src="{% static 'Images/building2.jpg' %}" class="building-img mt-5">
+                <img src="../images/building.jpg" class="building-img">
+                <img src="../images/building2.jpg" class="building-img mt-5">
             </div>
         </div>
         <div class="text-center">
@@ -177,36 +176,38 @@
         </div>
     </div>
      <!--Footer-->
-     <div class="row footer" style="margin-top: 25px; background-color: #090162; color: white;">
-        <div class="col-lg-4 footer-content">
-          <img src="{% static 'Images/logo1.png' %}" class="navbar-logo" />
-          <p>The english edition Online News</p>
-          <p>Phone No: 9856234124,014256352</p>
-          <p>taxcompany@gmail.com</p>
+     <footer class="footer">
+         <div class="container">
+            <div class="row" style="margin-top: 25px;">
+                <div class="col-lg-4 footer-content">
+                    <img src ="../images/logo1.png" class="navbar-logo">
+                    <p>The english edition Online News</p>
+                    <p>Phone No: 9856234124,014256352</p>
+                    <p>taxcompany@gmail.com</p>
+                </div>
+                <div class="col-lg-4 footer-content">
+                    <h6>News</h6>
+                    <p>Politics</p>
+                    <p>Entertainment</p>
+                    <p>Sports</p>
+                    <p>Business</p>
+                </div>
+                <div class="col-lg-4 footer-content">
+                    <h6>You can also find us on</h6>
+                    <div style="font-size: 35px; margin-left: 10px;">
+                        <i class="fa fa-facebook-official"></i>
+                        &nbsp;&nbsp;
+                        <i class="fa fa-instagram"></i>
+                        &nbsp;&nbsp;
+                        <i class="fa fa-twitter-square"></i>
+                    </div>
+                </div>
+                <hr class="mb-3" style="background-color: white; border: 1px solid white; width: 100%; margin-left: 0; margin-right: 0;">
+                <div style="background-color: #090162; color: white;width: 100%;">
+                    <p style="text-align: center;">Copyright &copy; 2021 Tax Management System, All rights reserved</p>
+                </div>
+            </div>
         </div>
-        <div class="col-lg-4 footer-content">
-          <h6>News</h6>
-          <a href="{% url 'politics' %}"><p>Politics</p></a>
-          <a href="{% url 'entertainment' %}"><p>Entertainment</p></a>
-          <a href="{% url 'sports' %}"><p>Sports</p></a>
-          <a href="{% url 'business' %}"><p>Business</p></a>
-        </div>
-        <div class="col-lg-4 footer-content">
-          <h6>You can also find us on</h6>
-          <div style="font-size: 35px; margin-left: 10px">
-            <i class="fa fa-facebook-official"></i>
-            &nbsp;&nbsp;
-            <i class="fa fa-instagram"></i>
-            &nbsp;&nbsp;
-            <i class="fa fa-twitter-square"></i>
-          </div>
-        </div>
-        <hr class="mb-3" style="background-color: white; border: 1px solid white; width: 100%; margin-left: 0; margin-right: 0;">
-        <div style="background-color: #090162; color: white; width: 100%">
-          <p style="text-align: center">
-            Copyright &copy; 2021 Tax Management System, All rights reserved
-          </p>
-        </div>
-      </div>
+    </footer>
     </body>
 </html>
