Fixed Bugs and added error page.

--- a/pages/Dashboard.html
+++ b/pages/Dashboard.html
@@ -52,6 +52,9 @@
           <a href="Dashboard.html" class="nav-link text-dark bg-light">
             <i class="fa fa-th-large mr-3 text-primary fa-fw"></i>Home
           </a>
+          <a href="Dashboard.html" class="nav-link text-dark">
+            <i class="fa fa-th-large mr-3 text-primary fa-fw"></i>Logout
+          </a>
         </li>
       </ul>
     </div>
