--- a/pages/taxCalculator.html
+++ b/pages/taxCalculator.html
@@ -82,7 +82,7 @@
                         <a href="./SignIn.html" class="nav-link text-white">
                             <button type="button" class="btn btn-primary btn-sm">Sign-in</button>
                         </a>
-                         <form class="d-flex mt-3">
+                         <form class="d-flex">
                             <input class="form-control" type="search" placeholder="Search" aria-label="Search">
                             <button class="btn btn-outline-success btn-sm ml-2" type="submit">Search</button>
                           </form>
@@ -252,38 +252,50 @@
             </div>
           </div>
         
-        <!--Footer-->
-        <div style="overflow: hidden;">
-            <div class="row footer px-3" style="margin-top: 25px;">
+          <footer class="footer">
+            <div class="container">
+              <div class="row" style="margin-top: 25px">
                 <div class="col-lg-4 footer-content">
-                    <img src ="../images/logo1.png" class="navbar-logo">
-                    <p>The english edition Online News</p>
-                    <p>Phone No: 9856234124,014256352</p>
-                    <p>taxcompany@gmail.com</p>
-                </div>
-                <div class="col-lg-4 footer-content">
-                    <h6>News</h6>
-                    <p>Politics</p>
-                    <p>Entertainment</p>
-                    <p>Sports</p>
-                    <p>Business</p>
+                  <img src="../images/logo1.png" class="navbar-logo" />
+                  <p>The english edition Online News</p>
+                  <p>Phone No: 9856234124,014256352</p>
+                  <p>taxcompany@gmail.com</p>
                 </div>
                 <div class="col-lg-4 footer-content">
-                    <h6>You can also find us on</h6>
-                    <div style="font-size: 35px; margin-left: 10px;">
-                        <i class="fa fa-facebook-official"></i>
-                        &nbsp;&nbsp;
-                        <i class="fa fa-instagram"></i>
-                        &nbsp;&nbsp;
-                        <i class="fa fa-twitter-square"></i>
-                    </div>
+                  <h6>News</h6>
+                  <p>Politics</p>
+                  <p>Entertainment</p>
+                  <p>Sports</p>
+                  <p>Business</p>
                 </div>
-                <hr class="mb-3" style="background-color: white; border: 1px solid white; width: 100%; margin-left: 0; margin-right: 0;">
-                <div style="background-color: #090162; color: white;width: 100%;">
-                    <p style="text-align: center;">Copyright &copy; 2021 Tax Management System, All rights reserved</p>
+                <div class="col-lg-4 footer-content">
+                  <h6>You can also find us on</h6>
+                  <div style="font-size: 35px; margin-left: 10px">
+                    <i class="fa fa-facebook-official"></i>
+                    &nbsp;&nbsp;
+                    <i class="fa fa-instagram"></i>
+                    &nbsp;&nbsp;
+                    <i class="fa fa-twitter-square"></i>
+                  </div>
                 </div>
+                <hr
+                  class="mb-3"
+                  style="
+                    background-color: white;
+                    border: 1px solid white;
+                    width: 100%;
+                    margin-left: 0;
+                    margin-right: 0;
+                  "
+                />
+                <div style="background-color: #090162; color: white; width: 100%">
+                  <p style="text-align: center">
+                    Copyright &copy; 2021 Tax Management System, All rights reserved
+                  </p>
+                </div>
+              </div>
             </div>
-        </div>
+          </footer>
         </body>
 
     <script>
